Tweaked spacing issues on the top header

--- a/content/src/site/resources/css/html.css
+++ b/content/src/site/resources/css/html.css
@@ -40,7 +40,7 @@ body {
 }
 
 #right-header {
-    padding-top: 16px;
+    padding-top: 5px;
 	float: right:
 	width: 350px;
 	padding-left: 50px;	
